# wealtrasphere

./: LICENSE  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
web/: .gitignore  .prettierrc.json  package.json  postcss.config.cjs  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
web/src/: App.tsx  index.tsx
web/src-tauri/: Cargo.toml
web/src-tauri/account/: Cargo.toml
web/src-tauri/account/src/: account_commands.rs  account_service.rs  lib.rs
web/src-tauri/blockchain/: Cargo.toml
web/src-tauri/blockchain/src/: blockchain_commands.rs  blockchain_service.rs  lib.rs
web/src-tauri/blockchain/src/rpc/: index.rs  mod.rs  rpc_service.rs
web/src-tauri/blockchain/src/solana/: mod.rs  solana.rs  solana_commands.rs  solana_service.rs
web/src-tauri/connection/: Cargo.toml
web/src-tauri/connection/src/solana/: rpc_service.rs  rpc_static.rs
web/src-tauri/database/: Cargo.toml
web/src-tauri/database/migrations/2024-09-24-180459_db/: up.sql
web/src-tauri/database/src/: db.rs  db_commands.rs  db_service.rs  enums.rs  lib.rs  models.rs  schema.rs  types.rs
web/src-tauri/metadata-api/: Cargo.toml
web/src-tauri/metadata-api/src/: index.rs  lib.rs  metadata_commands.rs  metadata_service.rs
web/src-tauri/metadata/src/: metadata_service.rs
web/src-tauri/price-api/: Cargo.toml
web/src-tauri/price-api/src/: index.rs  lib.rs  price_api_commands.rs  price_api_service.rs
web/src-tauri/src/: main.rs
web/src-tauri/src/commands/: index.rs
web/src-tauri/src/modules/: mod.rs  module_service.rs
web/src-tauri/state/: Cargo.toml
web/src-tauri/state/src/: index.rs
web/src/containers/Accounts/: Index.tsx
web/src/containers/Dashboard/: Index.tsx
web/src/containers/Modals/: AddAccountModal.tsx  EditAccountModal.tsx  Index.tsx
web/src/containers/Settings/: Index.tsx
web/src/routes/: index.ts
web/src/store/accounts/: accounts.ts  actions.ts  selectors.ts
web/src/store/dashboard/: dashboard.ts  selectors.ts
web/src/store/database/: index.ts
web/src/store/ui/: selectors.ts  ui.ts
web/src/store/utils/: index.ts
web/src/styles/: App.css  imports.css
web/src/types/enums/: index.ts
web/src/types/interfaces/: index.ts
web/src/types/interfaces/accounts/: index.ts
web/src/types/interfaces/database/: index.ts
web/src/types/interfaces/prices/: index.ts
web/src/types/interfaces/ui/: index.ts
web/src/types/types/: Index.ts
web/src/utils/: index.ts
web/src/utils/Solana/: Index.ts
