[package]
name = "wealtrasphere"
version = "0.1.0"
description = "A Tauri App"
authors = [
  "luckmer",
]
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[build-dependencies]
tauri-build = { version = "1", features = [
] }

[dependencies]
database = { path = "./database" }
blockchain = { path = "./blockchain" }
account = { path = "./account" }

tauri = { version = "1", features = [
  "shell-open",
  # "devtools", // dev mode
] }

rusqlite = { version = "0.32.1", features = [
  "bundled",
] }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = [
  "tauri/custom-protocol",
]

[workspace.dependencies]
anyhow = "1.0.93"
tauri = "1"
serde = { version = "1", features = [
  "derive",
] }
serde_json = "1"

[workspace]
members = [
  "account",
  "blockchain",
  "database",
]
