[package]
name = "blockchain"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
lazy_static = "1.5.0"
mockall = "0.13.0"
serde_json = "1.0.128"
solana-client = "2.0.13"
solana-sdk = "2.0.13"
anyhow = { workspace = true }
serde = { workspace = true }

database = { path = "../database" }
