[package]
name = "blockchain"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
lazy_static = "1.5.0"
mockall = "0.13.0"
serde_json = "1.0.128"
solana-client = { workspace = true }
solana-sdk = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
tauri = { workspace = true }
tokio = { workspace = true }
price-api = { path = "../price-api" }
metadata-api = { path = "../metadata-api" }
state = { path = "../state" }

spl-token = "7.0.0"
database = { path = "../database" }
solana-program = "2.1.1"
solana-account-decoder = "2.1.1"
bincode = "1.3.3"
spl-token-metadata = "0.0.1"
borsh = "1.5.3"
